Fix qemu -Wdeclaration-after-statement

--- a/series.conf
+++ b/series.conf
@@ -63,7 +63,7 @@ patches.misc/hvmpt03-passthrough-log.patch
 patches.misc/hvmpt04-minios-nomask-bar-addrs.patch
 patches.misc/hvmpt05-hide-pio-bars.patch
 patches.misc/hvmpt06-fix-msix.patch
-
+patches.misc/qemu-code-style.patch
 
 patches.misc/libxc-fix-xc_gntshr_munmap-semantic.patch
 patches.misc/minios-ignore-close-0.patch
