--- a/.travis.yml
+++ b/.travis.yml
@@ -1,21 +1,21 @@
 sudo: required
 dist: xenial
 language: minimal
-install: git clone https://github.com/"${TRAVIS_REPO_SLUG%%/*}"/qubes-builder ~/qubes-builder
+install: git clone -b rpmlib-update https://github.com/"${TRAVIS_REPO_SLUG%%/*}"/qubes-builder ~/qubes-builder
 script: ~/qubes-builder/scripts/travis-build
 # keep the log under 4MB limit
 env:
- - DIST_DOM0=fc25 USE_QUBES_REPO_VERSION=4.0 USE_QUBES_REPO_TESTING=1 VERBOSE=0
- - DISTS_VM=fc28 USE_QUBES_REPO_VERSION=4.0 USE_QUBES_REPO_TESTING=1 VERBOSE=0
- - DISTS_VM=fc29 USE_QUBES_REPO_VERSION=4.0 USE_QUBES_REPO_TESTING=1 VERBOSE=0
- - DISTS_VM=fc30 USE_QUBES_REPO_VERSION=4.0 USE_QUBES_REPO_TESTING=1 VERBOSE=0
+# - DIST_DOM0=fc25 USE_QUBES_REPO_VERSION=4.0 USE_QUBES_REPO_TESTING=1 VERBOSE=0
+# - DISTS_VM=fc28 USE_QUBES_REPO_VERSION=4.0 USE_QUBES_REPO_TESTING=1 VERBOSE=0
+# - DISTS_VM=fc29 USE_QUBES_REPO_VERSION=4.0 USE_QUBES_REPO_TESTING=1 VERBOSE=0
+# - DISTS_VM=fc30 USE_QUBES_REPO_VERSION=4.0 USE_QUBES_REPO_TESTING=1 VERBOSE=0
  - DISTS_VM=fc31 USE_QUBES_REPO_VERSION=4.0 USE_QUBES_REPO_TESTING=1 VERBOSE=0
- - DISTS_VM=centos7 USE_QUBES_REPO_VERSION=4.0 USE_QUBES_REPO_TESTING=1 VERBOSE=0
- - DISTS_VM=jessie USE_QUBES_REPO_VERSION=4.0 USE_QUBES_REPO_TESTING=1
- - DISTS_VM=stretch USE_QUBES_REPO_VERSION=4.0 USE_QUBES_REPO_TESTING=1
- - DISTS_VM=buster USE_QUBES_REPO_VERSION=4.0 USE_QUBES_REPO_TESTING=1
- - DISTS_VM=bullseye USE_QUBES_REPO_VERSION=4.0 USE_QUBES_REPO_TESTING=1
- - DISTS_VM=archlinux USE_QUBES_REPO_VERSION=4.0 USE_QUBES_REPO_TESTING=1
+# - DISTS_VM=centos7 USE_QUBES_REPO_VERSION=4.0 USE_QUBES_REPO_TESTING=1 VERBOSE=0
+# - DISTS_VM=jessie USE_QUBES_REPO_VERSION=4.0 USE_QUBES_REPO_TESTING=1
+# - DISTS_VM=stretch USE_QUBES_REPO_VERSION=4.0 USE_QUBES_REPO_TESTING=1
+# - DISTS_VM=buster USE_QUBES_REPO_VERSION=4.0 USE_QUBES_REPO_TESTING=1
+# - DISTS_VM=bullseye USE_QUBES_REPO_VERSION=4.0 USE_QUBES_REPO_TESTING=1
+# - DISTS_VM=archlinux USE_QUBES_REPO_VERSION=4.0 USE_QUBES_REPO_TESTING=1
 
 matrix:
   allow_failures:
